Update front end to enable ability to change device's attributes, refactor backend as needed to enable this. Fix bugs with simulation speed not being updated from the frontend and added thermostat mode check in the thermostat simulation task